--- a/LT.NET_project_cuoiki/LT.NET_project_cuoiki.csproj
+++ b/LT.NET_project_cuoiki/LT.NET_project_cuoiki.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ProductInCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
