--- a/LT.NET_project_cuoiki/bin/LT.NET_project_cuoiki.dll.config
+++ b/LT.NET_project_cuoiki/bin/LT.NET_project_cuoiki.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="dbstr" connectionString="Server = localhost; Database = shopbanngocquy; Uid = root; Pwd=;" providerName="MySql.Data.MySqlClient"/>
+		<add name="dbstr" connectionString="Server = localhost; Database = shop; Uid = root; Pwd=;" providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
