--- a/LT.NET_project_cuoiki/LT.NET_project_cuoiki.csproj
+++ b/LT.NET_project_cuoiki/LT.NET_project_cuoiki.csproj
@@ -127,7 +127,11 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
+    <Compile Include="DAO\ProductAdminDAO.cs" />
     <Compile Include="DAO\ProductDAO.cs" />
+    <Compile Include="Models\AddProductForAdminModel.cs" />
+    <Compile Include="DAO\AddProductInAdminDAO.cs" />
+    <Compile Include="Models\CategoryModel.cs" />
     <Compile Include="Models\DetailModel.cs" />
     <Compile Include="Models\ProductEntity.cs" />
     <Compile Include="Global.asax.cs">
@@ -904,6 +908,7 @@
     <Content Include="Views\Admin\tableDataBanned.cshtml" />
     <Content Include="Views\Admin\tableDataMoney.cshtml" />
     <Content Include="Views\Admin\tableDataManager.cshtml" />
+    <Content Include="Views\Admin\AddProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Admin\img-sanpham\TSTheoMenh\" />
