--- a/LT.NET_project_cuoiki/LT.NET_project_cuoiki.csproj
+++ b/LT.NET_project_cuoiki/LT.NET_project_cuoiki.csproj
@@ -909,6 +909,7 @@
     <Content Include="Views\Admin\tableDataMoney.cshtml" />
     <Content Include="Views\Admin\tableDataManager.cshtml" />
     <Content Include="Views\Admin\AddProduct.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Admin\img-sanpham\TSTheoMenh\" />
