--- a/LT.NET_project_cuoiki/bin/LT.NET_project_cuoiki.dll.config
+++ b/LT.NET_project_cuoiki/bin/LT.NET_project_cuoiki.dll.config
@@ -59,4 +59,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="Network" from="20130260@st.hcmuaf.edu.vn">
+				<network host="smtp.gmail.com" port="587" userName="20130260@st.hcmuaf.edu.vn" password="mmphuiyfogvxxobw" enableSsl="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
 </configuration>
